--- a/coderise.web/coderise.web.csproj
+++ b/coderise.web/coderise.web.csproj
@@ -43,6 +43,7 @@
     <Content Include="package.json" />
     <Content Include="readme.md" />
     <Content Include="test\mocha.opts" />
+    <Content Include="runserver.cmd" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -62,6 +63,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <RootNamespace>coderise.web</RootNamespace>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
