api controller unit tests

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\coderise.service.tests\packages.config" />
   <repository path="..\coderise.service\packages.config" />
 </repositories>
